# TuningModels

./: .gitignore  README.md  ViBLIP_landmark.ipynb  ViBLIP_landmark_test.ipynb  ViBLIP_test.ipynb  ViBLIP_uitopenviic.ipynb  ViBLIP_uitopenviic_2nd.ipynb  ViBLIP_vivqa.ipynb  ViBLIP_vivqa_2nd.ipynb  ViCLIP_landmark.ipynb  ViCLIP_landmark_2nd.ipynb  ViCLIP_uitopenviic.ipynb  ViCLIP_uitopenviic_2nd.ipynb  ViCLIP_vivqa.ipynb  ViCLIP_vivqa_2nd.ipynb  ViSigLIP_landmark.ipynb  ViSigLIP_test.ipynb  ViSigLIP_uitopenviic.ipynb  ViSigLIP_uitopenviic_2nd.ipynb  ViSigLIP_vivqa.ipynb  datasplit.ipynb  pyproject.toml  train_viblip.ipynb  train_viclip.ipynb  viclip_landmark.ipynb  viclip_vivqa.ipynb
.dvc/: config  gdrive_service_account.json
data/: LANDMARK-IN-VIETNAM.dvc  OpenViVQA-dataset.dvc  UIT-OpenViIC-dataset.dvc
json_data/: dev.json  test.json  train.json
refined_json/: dev.json  test.json  train.json
sample_data/: dev.json  test.json  train.json  val.json
