[project]
name = "phoclip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=1.6.0",
  "albumentations>=2.0.5",
  "dvc>=3.59.1",
  "dvc-gdrive>=3.0.1",
  "gdown>=5.2.0",
  "jsonlines>=4.0.0",
  "jupyter>=1.1.1",
  "matplotlib>=3.10.1",
  "numpy>=2.2.4",
  "nvitop>=1.4.2",
  "pillow>=11.1.0",
  "py-vncorenlp>=0.1.4",
  "scikit-learn>=1.6.1",
  "seaborn>=0.13.2",
  "timm>=1.0.15",
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "tqdm>=4.67.1",
  "transformers>=4.50.0",
  "vncorenlp>=1.0.3",
  "wget>=3.2",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
